fixed the slide button by taking out the z-index

--- a/magazine/static/css/main.css
+++ b/magazine/static/css/main.css
@@ -193,7 +193,6 @@ p{
     margin: 0px;
     padding: 0px;
     position: relative;
-    z-index: -1;
     margin: auto;
 }
 .gallery-image{
@@ -214,6 +213,7 @@ p{
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
+    z-index: 1;
   }
   .next {
     right: 0;
